Fix songs and playlist overflow issue

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,6 +28,7 @@ body {
   left: 10%;
   height: 90%;
   top: 5%;
+  overflow: hidden;
 }
 
 #app-root {
@@ -153,7 +154,7 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
-  overflow: scroll;
+  overflow: hidden;
 }
 
 
